--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -25,6 +25,10 @@
           <i class="icon-head"></i>Ofertas
         </a>
 
+        <a *ngIf="user && user.role === 'CLIENT'" class="list-group-item" routerLinkActive="active" routerLink="/account/stats">
+          <i class="icon-pie-graph"></i>Estadísticas
+        </a>
+
         <a *ngIf="user && user.role === 'PROVIDER'" class="list-group-item" routerLinkActive="active" routerLink="/account/offer/provider">
           <i class="icon-head"></i>Mis Ofertas
         </a>
