--- a/src/app/account/client/client.component.html
+++ b/src/app/account/client/client.component.html
@@ -1,6 +1,6 @@
 <div class="padding-top-2x mt-2 hidden-lg-up">
 </div>
-<div class="table-responsive">
+<div class="table-responsive" *ngIf="router.url !== '/account/stats'">
   <table class="table table-hover margin-bottom-none">
     <thead>
       <tr>
@@ -23,5 +23,20 @@
 
     </tbody>
   </table>
+
+
+</div>
+
+<div style="display: block" *ngIf="router.url === '/account/stats'">
+  <canvas mdbChart
+          [chartType]="chartType"
+          [datasets]="chartDatasets"
+          [labels]="chartLabels"
+          [colors]="chartColors"
+          [options]="chartOptions"
+          [legend]="true"
+          (chartHover)="chartHovered($event)"
+          (chartClick)="chartClicked($event)">
+  </canvas>
 </div>
 <hr>
