--- a/src/app/account/client/client.component.html
+++ b/src/app/account/client/client.component.html
@@ -15,7 +15,7 @@
         <td>
           <a class="text-medium navi-link" href="#" data-toggle="modal" data-target="#orderDetails">{{request.id}}</a>
         </td>
-        <td>{{request.date | date:'mediumDate'}}</td>
+        <td>{{request.date | date:'medium'}}</td>
         <td>
           <span class="text-info">{{request.status}}</span>
         </td>
