--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -1,7 +1,7 @@
 <div class="product-detail" [ngClass]="{'loading' : productLoading}">
   <div *ngIf="product">
 
-    <app-page-title title="{{ product.name }}" [children]="[{title: 'Products', link: '/products'}, {title: product.name}]"></app-page-title>
+    <app-page-title title="{{ product.name }}" [children]="[{title: 'Productos', link: '/productos'}, {title: product.name}]"></app-page-title>
 
 
     <!-- Page Content-->
