--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -1,4 +1,4 @@
-<app-page-title title="Products" [children]="[{title: 'Productos'}]"></app-page-title>
+<app-page-title title="Productos" [children]="[{title: 'Productos'}]"></app-page-title>
 
 <!-- Page Content-->
 <div class="container padding-bottom-3x mb-1">
