--- a/src/app/account/offer/offer.component.html
+++ b/src/app/account/offer/offer.component.html
@@ -15,12 +15,12 @@
         <td>
           <a class="text-medium navi-link" href="#" data-toggle="modal" data-target="#orderDetails">{{request.id}}</a>
         </td>
-        <td>{{request.date | date:'mediumDate'}}</td>
+        <td>{{request.date | date:'medium'}}</td>
         <td>
           <span class="text-info">{{request.status}}</span>
         </td>
         <td *ngIf="router.url === '/account/offer/client'">
-          <span>{{request.representative}}</span>
+          <span>{{request.representative || ''}}</span>
           <br>
           <span>{{request.email}}</span>
         </td>
